Carrusel2, timer con fecha del evento, nav var fijo

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </head>
 
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light fixed-top">
+    <nav class="navbar navbar-expand-lg navbar-light" style="background-color: rgba(8, 8, 8, 0.712)">
       <div class="container-fluid">
         <!-- <button class="navbar-toggler ms-auto" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -63,8 +63,8 @@
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" style="margin: 0 60px" href="#ubicacion"
-                >Ubicación</a
+              <a class="nav-link" style="margin: 0 60px" href="#detalles"
+                >Detalles</a
               >
             </li>
           </ul>
@@ -166,7 +166,7 @@
       </div>
 
       <div class="row" style="padding-top: 20px">
-        <div id="carouselExampleFade" class="carousel slide carousel-fade">
+        <div id="carousel2" class="carousel slide carousel-fade">
           <div class="carousel-inner">
             <div class="carousel-item active">
               <img src="imgs/galery/1.jpeg" class="img-fluid" />
@@ -181,7 +181,7 @@
           <button
             class="carousel-control-prev"
             type="button"
-            data-bs-target="#carouselExampleFade"
+            data-bs-target="#carousel2"
             data-bs-slide="prev"
           >
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -190,7 +190,7 @@
           <button
             class="carousel-control-next"
             type="button"
-            data-bs-target="#carouselExampleFade"
+            data-bs-target="#carousel2"
             data-bs-slide="next"
           >
             <span class="carousel-control-next-icon" aria-hidden="true"></span>
