--- a/index.html
+++ b/index.html
@@ -41,10 +41,14 @@
 
   <section id="about" class="text-center" style="background-color: white">
 
-    <div class="row" style="padding-top: 40px">
-      <div class="col-md-6 col-12 text-center" style="font-family: Great Vibes; color: darkslategrey; font-size: 3em">
+    <div class="row" style="margin-top: 40px">
+      <div class="col-md-6 col-12" style="font-family: auto; color: darkslategrey; font-size: 2em">
+        <p style="margin-top: 40px;">
+          Esc. Telesec. "Sor Juana Inés de la Cruz", Esc. Prim. "El Pensador Mexicano" 
+          y Esc. Preescolar "Rafael Ramirez".
+        </p>
         <p>
-          Estamos emocionados de invitarte a la celebración de la graduación
+          Estamos emocionados y tenemos el honor de invitarle a la celebración de la graduación
           de nuestros queridos estudiantes de preescolar, primaria y
           secundaria.
         </p>
@@ -57,10 +61,13 @@
         <div id="carousel2" class="carousel slide carousel-fade" data-bs-ride="carousel">
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img src="imgs/galery/1.jpeg" class="img-fluid" />
+              <img src="imgs/galery/pensador.jpeg" class="img-fluid" />
             </div>
             <div class="carousel-item">
               <img src="imgs/galery/2.jpeg" class="img-fluid" />
+            </div>
+            <div class="carousel-item">
+              <img src="imgs/galery/1.jpeg" class="img-fluid" />
             </div>
             <div class="carousel-item">
               <img src="imgs/galery/3.jpeg" class="img-fluid" />
@@ -78,12 +85,12 @@
       </div>
     </div>
 
-    <div class="row" style="padding-top: 20px">
+    <div class="container" style="padding-top: 10px">
       <h1 style="
           font-family: 'Great Vibes';
           color: black;
-          padding-top: 50px;
           font-size: 4em;
+          margin-top: 40px;
           display: inline-block;
         ">
         ¡Felicidades Graduados!
@@ -93,19 +100,53 @@
             height: max-content;
           " />
       </h1>
-        <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
+      <div class="row" style="margin: 10px;">
+        <div class="col-md-4" style="margin-top: 20px;">
+            <h3>Esc. Telesec. "Sor Juana Inés de la Cruz"</h3>
+            <hr>
+              <ul class="list-group list-group-flush">
+                <li class="list-group">María del Carmen Vega Zamarron</li>
+                <li class="list-group">Tania Libertad Narváez Portales</li>
+                <li class="list-group">Alondra Yudith Ramos Ruiz</li>
+                <li class="list-group">Karina Vega García</li>
+              </ul>
+        </div>
+        <div class="col-md-4" style="margin-top: 20px;">
+          <h3>Esc. Prim. "El Pensador Mexicano"</h3>
+          <hr>
+            <ul class="list-group list-group-flush">
+              <li class="list-group">Victor Guadalupe Portales García</li>
+              <li class="list-group">Tadeo Maximiliano Zuñiga Niño</li>
+              <li class="list-group">Anai Yoselin García Alvarado</li>
+              <li class="list-group">Jorge Emmanuel Torres Avila</li>
+              
+            </ul>
+      </div>
+      <div class="col-md-4" style="margin-top: 20px;">
+        <h3>Esc. Preescolar <br>"Rafael Ramirez"</h3>
+        <hr>
+          <ul class="list-group list-group-flush">
+            <li class="list-group">Luis Gerardo Torres Avíla </li>
+            <li class="list-group">Mariana Zoé Portales Ruiz</li>
+            <li class="list-group">Jorge Luis Compeán Pardo</li>
+            <li class="list-group">Heriberto Guzmán Ramos </li>
+          </ul>
+    </div>
+
+      </div>
+        <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel" style="margin-top: 20px;">
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img src="imgs/galery/graduados.jpeg" class="img-fluid" />
+              <img src="imgs/galery/graduados1.jpeg" class="img-fluid" />
             </div>
             <div class="carousel-item">
-              <img src="imgs/galery/primaria.jpeg" class="img-fluid" />
+              <img src="imgs/galery/primaria1.jpeg" class="img-fluid" />
             </div>
             <div class="carousel-item">
-              <img src="imgs/galery/kinder.jpeg" class="img-fluid" />
+              <img src="imgs/galery/prees1.jpeg" class="img-fluid" />
             </div>
             <div class="carousel-item">
-              <img src="imgs/galery/secu.jpeg" class="img-fluid" />
+              <img src="imgs/galery/secu1.jpeg" class="img-fluid" />
             </div>
           </div>
           <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade"
@@ -175,10 +216,6 @@
   <div class="w-100 align-self-end" style=" margin: 20px;">
     <small class="nav d-block fs-xs text-center text-body-secondary">
       &copy; Todos los derechos reservados.
-      <h5>Contacto</h5>
-        <p>
-        📧 vicente.zavala123@outlook.com
-      </p>
     </small>
   </div>
 </footer>
