--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   <link href="node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" />
   <link rel="stylesheet" href="./indexInicio.css" />
   <link rel="stylesheet" href="./cuentaRegresiva.css" />
+  <link rel="icon" href="favicon.ico" type="image/x-icon">
+
 </head>
 
 <body>
